--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -10,8 +10,18 @@
   	<description></description>
   	<servlet-class>dem</servlet-class>
   </servlet>
+  <servlet>
+  	<servlet-name>EmailServlet</servlet-name>
+  	<display-name>EmailServlet</display-name>
+  	<description></description>
+  	<servlet-class>webpack.EmailServlet</servlet-class>
+  </servlet>
   <servlet-mapping>
   	<servlet-name>dem</servlet-name>
   	<url-pattern>/dem</url-pattern>
+  </servlet-mapping>
+  <servlet-mapping>
+  	<servlet-name>EmailServlet</servlet-name>
+  	<url-pattern>/EmailServlet</url-pattern>
   </servlet-mapping>
 </web-app>
